added connection to postgres sql database from within the api project

--- a/Fylum.Api/appsettings.Development.json
+++ b/Fylum.Api/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DbConnection": {
+    "Host": "db",
+    "Port": 5432,
+    "Database": "Fylum"
   }
 }
