added the first steps of the migration project

--- a/Fylum.PostgreSql.Tests/Fylum.PostgreSql.Tests.csproj
+++ b/Fylum.PostgreSql.Tests/Fylum.PostgreSql.Tests.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fylum\Fylum.PostgreSql\Fylum.PostgreSql.csproj" />
+    <ProjectReference Include="..\Fylum.PostgreSql\Fylum.PostgreSql.csproj" />
   </ItemGroup>
 
 </Project>
