--- a/Fylum.PostgreSql.Shared/Fylum.PostgreSql.Shared.csproj
+++ b/Fylum.PostgreSql.Shared/Fylum.PostgreSql.Shared.csproj
@@ -4,12 +4,14 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<RootNamespace>Fylum</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Fylum.Domain\Fylum.Domain.csproj" />
-		<ProjectReference Include="..\Fylum.PostgreSql.Shared\Fylum.PostgreSql.Shared.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.9" />
+		<PackageReference Include="Npgsql" Version="9.0.4" />
+	</ItemGroup>
 </Project>
