--- a/Fylum.PostgreSql.Migrations.PostgreSql/Fylum.PostgreSql.Migrations.PostgreSql.csproj
+++ b/Fylum.PostgreSql.Migrations.PostgreSql/Fylum.PostgreSql.Migrations.PostgreSql.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fylum.PostgreSql.Migration.Domain\Fylum.PostgreSql.Migration.Domain.csproj" />
+    <ProjectReference Include="..\Fylum.PostgreSql.Migration.Application\Fylum.PostgreSql.Migration.Application.csproj" />
     <ProjectReference Include="..\Fylum.PostgreSql.Shared\Fylum.PostgreSql.Shared.csproj" />
   </ItemGroup>
 
