--- a/docker-compose/launchSettings.json
+++ b/docker-compose/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Docker Compose": {
+    "Fylum API with Postgres": {
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "composeLaunchAction": "LaunchBrowser",
@@ -9,6 +9,15 @@
       "serviceActions": {
         "fylum.api": "StartDebugging",
         "db": "StartWithoutDebugging",
+        "pgadmin": "StartWithoutDebugging"
+      }
+    },
+    "Only Postgres Infra": {
+      "commandName": "DockerCompose",
+      "commandVersion": "1.0",
+      "serviceActions": {
+        "db": "StartWithoutDebugging",
+        "fylum.api": "DoNotStart",
         "pgadmin": "StartWithoutDebugging"
       }
     }
