adjust docker compose and dockerfile to be able to start outside of Visual Studio

--- a/Fylum.Api/Dockerfile
+++ b/Fylum.Api/Dockerfile
@@ -13,6 +13,9 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Fylum.Api/Fylum.Api.csproj", "Fylum.Api/"]
+COPY ["Fylum.Domain/Fylum.Domain.csproj", "Fylum.Domain/"]
+COPY ["Fylum.PostgreSql/Fylum.PostgreSql.csproj", "Fylum.PostgreSql/"]
+COPY ["Fylum.PostgreSql.Shared/Fylum.PostgreSql.Shared.csproj", "Fylum.PostgreSql.Shared/"]
 COPY ["Fylum.Shared/Fylum.Shared.csproj", "Fylum.Shared/"]
 RUN dotnet restore "./Fylum.Api/Fylum.Api.csproj"
 COPY . .
