--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   fylum.api:
     image: ${DOCKER_REGISTRY-}fylumapi
     build:
-      context: .
-      dockerfile: ../Fylum.Api/Dockerfile
+      context: ..
+      dockerfile: Fylum.Api/Dockerfile
 
   db:
     image: postgres
