--- a/Fylum.Migration.Application/Fylum.Migration.Application.csproj
+++ b/Fylum.Migration.Application/Fylum.Migration.Application.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fylum.PostgreSql.Migration.Domain\Fylum.PostgreSql.Migration.Domain.csproj" />
+    <ProjectReference Include="..\Fylum.Migration.Domain\Fylum.Migration.Domain.csproj" />
   </ItemGroup>
 
 
