--- a/Fylum.Migration.Winforms/Fylum.Migration.Winforms.csproj
+++ b/Fylum.Migration.Winforms/Fylum.Migration.Winforms.csproj
@@ -23,8 +23,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="M2TWinForms" Version="0.1.2" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.10" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.10" />
 	</ItemGroup>
 
 
