--- a/Fylum.Users.Application/Fylum.Users.Application.csproj
+++ b/Fylum.Users.Application/Fylum.Users.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fylum.Application\Fylum.Application.csproj" />
+    <ProjectReference Include="..\Fylum.Users.Domain\Fylum.Users.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
