--- a/Fylum.Api/Fylum.Api.csproj
+++ b/Fylum.Api/Fylum.Api.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Fylum.Application\Fylum.Application.csproj" />
-    <ProjectReference Include="..\Fylum.PostgreSql\Fylum.PostgreSql.csproj" />
+    <ProjectReference Include="..\Fylum.Postgres\Fylum.Postgres.csproj" />
     <ProjectReference Include="..\Fylum.Shared\Fylum.Shared.csproj" />
     <ProjectReference Include="..\Fylum.Users.Application\Fylum.Users.Application.csproj" />
   </ItemGroup>
