fully implemented login endpoint with cqrs and ddd layers

--- a/Fylum.Api/appsettings.Development.json
+++ b/Fylum.Api/appsettings.Development.json
@@ -8,6 +8,12 @@
   "DbConnection": {
     "Host": "db",
     "Port": 5432,
-    "Database": "Fylum"
+    "Database": "fylum"
+  },
+  "PasswordHashing": {
+    "IterationCount": 100000,
+    "SaltBits": 128,
+    "HashedBits": 256,
+    "PseudoRandomFunction": "HMACSHA256"
   }
-}
+} 
