--- a/Fylum.Api/Fylum.Api.csproj
+++ b/Fylum.Api/Fylum.Api.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\Fylum.Postgres\Fylum.Postgres.csproj" />
     <ProjectReference Include="..\Fylum.Shared\Fylum.Shared.csproj" />
     <ProjectReference Include="..\Fylum.Users.Application\Fylum.Users.Application.csproj" />
+    <ProjectReference Include="..\Fylum.Users.Postgres\Fylum.Users.Postgres.csproj" />
   </ItemGroup>
 
 </Project>
