--- a/Fylum.Users.Application/Fylum.Users.Application.csproj
+++ b/Fylum.Users.Application/Fylum.Users.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Fylum.Application\Fylum.Application.csproj" />
     <ProjectReference Include="..\Fylum.Users.Domain\Fylum.Users.Domain.csproj" />
   </ItemGroup>
