--- a/Fylum.Migration.Domain/Fylum.Migration.Domain.csproj
+++ b/Fylum.Migration.Domain/Fylum.Migration.Domain.csproj
@@ -4,5 +4,8 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Fylum.Domain\Fylum.Domain.csproj" />
+	</ItemGroup>
 
 </Project>
