--- a/Fylum.Migration.Postgres/Fylum.Migration.Postgres.csproj
+++ b/Fylum.Migration.Postgres/Fylum.Migration.Postgres.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Fylum.Postgres.Shared\Fylum.Postgres.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ScriptExecution\" />
+  </ItemGroup>
+
 </Project>
