--- a/Fylum.Migration.Application/Fylum.Migration.Application.csproj
+++ b/Fylum.Migration.Application/Fylum.Migration.Application.csproj
@@ -7,10 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.10" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Fylum.Application\Fylum.Application.csproj" />
     <ProjectReference Include="..\Fylum.Migration.Domain\Fylum.Migration.Domain.csproj" />
   </ItemGroup>
 
