--- a/Fylum.Migration.Postgres/Fylum.Migration.Postgres.csproj
+++ b/Fylum.Migration.Postgres/Fylum.Migration.Postgres.csproj
@@ -1,22 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Dapper" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Fylum.Migration.Application\Fylum.Migration.Application.csproj" />
     <ProjectReference Include="..\Fylum.Postgres.Shared\Fylum.Postgres.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ScriptExecution\" />
   </ItemGroup>
 
 </Project>
