--- a/Fylum.Migration.Provider/Fylum.Migration.Provider.csproj
+++ b/Fylum.Migration.Provider/Fylum.Migration.Provider.csproj
@@ -1,11 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-	</PropertyGroup>
-
 	<ItemGroup>
 		<Content Include="MigrationFiles\**\*.psql">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -13,7 +7,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
 	</ItemGroup>
 
 	<ItemGroup>
