--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -13,6 +13,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      GITHUB_USER: ${{ github.repository_owner }}
 
     steps:
     - uses: actions/checkout@v5
@@ -20,6 +22,12 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Add GitHub Packages source
+      run: |
+        dotnet nuget add source "https://nuget.pkg.github.com/${{ env.GITHUB_USER }}/index.json" \
+          --username ${{ env.GITHUB_USER }} \
+          --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text \
+          --name github
     - name: Restore dependencies
       run: dotnet restore --property:EnableWindowsTargeting=true
     - name: Build
