reorganized the migrations context to mostly reside in the api project

--- a/Fylum.Migrations.Application/Fylum.Migrations.Application.csproj
+++ b/Fylum.Migrations.Application/Fylum.Migrations.Application.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Fylum.Application\Fylum.Application.csproj" />
-    <ProjectReference Include="..\Fylum.Migration.Domain\Fylum.Migration.Domain.csproj" />
+    <ProjectReference Include="..\Fylum.Migrations.Domain\Fylum.Migrations.Domain.csproj" />
   </ItemGroup>
 
 </Project>
