--- a/Fylum.Migration.Postgres/Fylum.Migrations.Postgres.csproj
+++ b/Fylum.Migration.Postgres/Fylum.Migrations.Postgres.csproj
@@ -5,7 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fylum.Migration.Application\Fylum.Migration.Application.csproj" />
+    <ProjectReference Include="..\Fylum.Migration.Application\Fylum.Migrations.Application.csproj" />
     <ProjectReference Include="..\Fylum.Postgres.Shared\Fylum.Postgres.Shared.csproj" />
   </ItemGroup>
 
