--- a/Fylum.Migrations.Provider/Fylum.Migrations.Provider.csproj
+++ b/Fylum.Migrations.Provider/Fylum.Migrations.Provider.csproj
@@ -11,7 +11,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Fylum.Migration.Domain\Fylum.Migration.Domain.csproj" />
+		<ProjectReference Include="..\Fylum.Migrations.Domain\Fylum.Migrations.Domain.csproj" />
 	</ItemGroup>
 
 </Project>
