--- a/Fylum.Api/Fylum.Api.csproj
+++ b/Fylum.Api/Fylum.Api.csproj
@@ -15,7 +15,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\Fylum.Api.Shared\Fylum.Api.Shared.csproj" />
 		<ProjectReference Include="..\Fylum.Application\Fylum.Application.csproj" />
+		<ProjectReference Include="..\Fylum.Migrations.Api\Fylum.Migrations.Api.csproj" />
 		<ProjectReference Include="..\Fylum.Postgres\Fylum.Postgres.csproj" />
 		<ProjectReference Include="..\Fylum.Shared\Fylum.Shared.csproj" />
 		<ProjectReference Include="..\Fylum.Users.Application\Fylum.Users.Application.csproj" />
