--- a/Fylum.Api.Shared/Fylum.Api.Shared.csproj
+++ b/Fylum.Api.Shared/Fylum.Api.Shared.csproj
@@ -5,5 +5,9 @@
 		<PackageReference Include="FastEndpoints.Security" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Fylum.Application\Fylum.Application.csproj" />
+	</ItemGroup>
 	
 </Project>
