include the migration scripts as embedded resources restore them from the resource stream use the unit of work in MinimallyRequiredMigrationService to actually commit the migration performing

--- a/Fylum.Migrations.Provider/Fylum.Migrations.Provider.csproj
+++ b/Fylum.Migrations.Provider/Fylum.Migrations.Provider.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
-		<Content Include="MigrationFiles\**\*.psql">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
+		<EmbeddedResource Include="MigrationFiles\**\*.psql" />
 	</ItemGroup>
 
 	<ItemGroup>
