add http command to perform migrations

--- a/Fylum.AppHost/Fylum.AppHost.csproj
+++ b/Fylum.AppHost/Fylum.AppHost.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Fylum.Api\Fylum.Api.csproj" />
+    <ProjectReference Include="..\Fylum.Migrations.Api.Shared\Fylum.Migrations.Api.Shared.csproj"
+					  IsAspireProjectResource="false"/>
   </ItemGroup>
 
 </Project>
