added endpoint to perform all migrations

--- a/Fylum.Migrations.Application/Fylum.Migrations.Application.csproj
+++ b/Fylum.Migrations.Application/Fylum.Migrations.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Fylum.Users.Domain\Fylum.Users.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Perform\MinimallyRequired\" />
+  </ItemGroup>
+
 </Project>
