--- a/Fylum.Api/Fylum.Api.csproj
+++ b/Fylum.Api/Fylum.Api.csproj
@@ -2,8 +2,7 @@
 
 	<PropertyGroup>
 		<UserSecretsId>3af62b9c-262c-4dd7-8858-642688b5bcdc</UserSecretsId>
-		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-		<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+		<ContainerDefaultTargetOS>Linux</ContainerDefaultTargetOS>
 	</PropertyGroup>
 
 	<ItemGroup>
