--- a/Fylum.Migrations.Api/Fylum.Migrations.Api.csproj
+++ b/Fylum.Migrations.Api/Fylum.Migrations.Api.csproj
@@ -1,15 +1,29 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-	
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
+	<PropertyGroup>
+		<UserSecretsId>3af62b9c-262c-4dd7-8858-642688b5bcdc</UserSecretsId>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="FastEndpoints" />
+		<PackageReference Include="FastEndpoints.Security" />
+		<PackageReference Include="FastEndpoints.Swagger" />
+		<PackageReference Include="Swashbuckle.AspNetCore" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
-	  <ProjectReference Include="..\Fylum.Api.Shared\Fylum.Api.Shared.csproj" />
-	  <ProjectReference Include="..\Fylum.Migrations.Api.Shared\Fylum.Migrations.Api.Shared.csproj" />
-	  <ProjectReference Include="..\Fylum.Migrations.Application\Fylum.Migrations.Application.csproj" />
-	  <ProjectReference Include="..\Fylum.Migrations.Postgres\Fylum.Migrations.Postgres.csproj" />
-	  <ProjectReference Include="..\Fylum.Migrations.Provider\Fylum.Migrations.Provider.csproj" />
+		<ProjectReference Include="..\Fylum.Api.Shared\Fylum.Api.Shared.csproj" />
+		<ProjectReference Include="..\Fylum.Application\Fylum.Application.csproj" />
+		<ProjectReference Include="..\Fylum.Migrations.Api.Shared\Fylum.Migrations.Api.Shared.csproj" />
+		<ProjectReference Include="..\Fylum.Migrations.Application\Fylum.Migrations.Application.csproj" />
+		<ProjectReference Include="..\Fylum.Migrations.Postgres\Fylum.Migrations.Postgres.csproj" />
+		<ProjectReference Include="..\Fylum.Migrations.Provider\Fylum.Migrations.Provider.csproj" />
+		<ProjectReference Include="..\Fylum.Postgres\Fylum.Postgres.csproj" />
+		<ProjectReference Include="..\Fylum.ServiceDefaults\Fylum.ServiceDefaults.csproj" />
+		<ProjectReference Include="..\Fylum.Shared\Fylum.Shared.csproj" />
+		<ProjectReference Include="..\Fylum.Users.Application\Fylum.Users.Application.csproj" />
+		<ProjectReference Include="..\Fylum.Users.Postgres\Fylum.Users.Postgres.csproj" />
 	</ItemGroup>
 
 </Project>
