--- a/Fylum.Migrations.Api/Fylum.Migrations.Api.csproj
+++ b/Fylum.Migrations.Api/Fylum.Migrations.Api.csproj
@@ -8,6 +8,7 @@
 		<PackageReference Include="FastEndpoints" />
 		<PackageReference Include="FastEndpoints.Security" />
 		<PackageReference Include="FastEndpoints.Swagger" />
+		<PackageReference Include="Scalar.AspNetCore" />
 		<PackageReference Include="Swashbuckle.AspNetCore" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
 	</ItemGroup>
