--- a/.github/workflows/style-check.yml
+++ b/.github/workflows/style-check.yml
@@ -1,16 +1,14 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET Build and Test
+name: .NET Style Check
 
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "*" ]
 
 jobs:
-  build:
+  style-check:
 
     runs-on: ubuntu-latest
     env:
@@ -21,7 +19,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 10.0.x
     - name: Add GitHub Packages source
       run: |
         dotnet nuget add source "https://nuget.pkg.github.com/${{ env.GITHUB_USER }}/index.json" \
@@ -30,7 +28,5 @@ jobs:
           --name github
     - name: Restore dependencies
       run: dotnet restore --property:EnableWindowsTargeting=true
-    - name: Build
-      run: dotnet build --no-restore --property:EnableWindowsTargeting=true
-    - name: Test
-      run: dotnet test --no-build --verbosity normal --property:EnableWindowsTargeting=true
+    - name: Verify Style with .editorconfig
+      run: dotnet format --verify-no-changes --verbosity detailed --no-restore
