--- a/.editorconfig
+++ b/.editorconfig
@@ -212,7 +212,7 @@ dotnet_style_operator_placement_when_wrapping = beginning_of_line
 tab_width = 4
 indent_style = space
 indent_size = 4
-end_of_line = crlf
+end_of_line = lf
 insert_final_newline = false
 dotnet_style_coalesce_expression = true:suggestion
 dotnet_style_null_propagation = true:suggestion
