--- a/.editorconfig
+++ b/.editorconfig
@@ -249,6 +249,7 @@ dotnet_naming_style.begins_with__.word_separator =
 dotnet_naming_style.begins_with__.capitalization = camel_case
 
 [*.{cs,vb}]
+end_of_line = lf
 tab_width = 4
 indent_style = space
 indent_size = 4
