added all layers for refreshing an access token skipped the persisting of the refresh token for now

--- a/Fylum.Api/appsettings.Development.json
+++ b/Fylum.Api/appsettings.Development.json
@@ -5,15 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DbConnection": {
-    "Host": "db",
-    "Port": 5432,
-    "Database": "fylum"
-  },
   "PasswordHashing": {
     "IterationCount": 100000,
     "SaltBits": 128,
     "HashedBits": 256,
     "PseudoRandomFunction": "HMACSHA256"
+  },
+  "JwtAuth": {
+    "AccessTokenExpirationMinutes": 10,
+    "RefreshTokenExpirationDays": 7
   }
 } 
