--- a/Fylum.Users.Api.Shared/Fylum.Users.Api.Shared.csproj
+++ b/Fylum.Users.Api.Shared/Fylum.Users.Api.Shared.csproj
@@ -1,3 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <ItemGroup>
+    <ProjectReference Include="..\Fylum.Api.Shared\Fylum.Api.Shared.csproj" />
+  </ItemGroup>
 </Project>
