call the refresh token persistence repository in the loin command handler

--- a/Fylum.Api.Shared/Fylum.Api.Shared.csproj
+++ b/Fylum.Api.Shared/Fylum.Api.Shared.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Fylum.Application\Fylum.Application.csproj" />
+	  <ProjectReference Include="..\Fylum.Users.Application\Fylum.Users.Application.csproj" />
 	</ItemGroup>
 	
 </Project>
