--- a/Fylum.Users.Domain/Fylum.Users.Domain.csproj
+++ b/Fylum.Users.Domain/Fylum.Users.Domain.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\Fylum.Application\Fylum.Application.csproj" />
     <ProjectReference Include="..\Fylum.Domain\Fylum.Domain.csproj" />
   </ItemGroup>
 
