--- a/Fylum.Api/appsettings.Development.json
+++ b/Fylum.Api/appsettings.Development.json
@@ -12,7 +12,9 @@
     "PseudoRandomFunction": "HMACSHA256"
   },
   "JwtAuth": {
-    "AccessTokenExpirationMinutes": 10,
+    "AccessTokenExpirationMinutes": 10
+  },
+  "RefreshToken": {
     "RefreshTokenExpirationDays": 7
   }
 } 
