--- a/Fylum.Client/Fylum.Client.csproj
+++ b/Fylum.Client/Fylum.Client.csproj
@@ -2,6 +2,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Http" />
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Fylum.Shared\Fylum.Shared.csproj" />
