added api endpoint to logout will invalidate the provided refresh token, so the next time an acess token is requested an unauthorized result will be returned

--- a/Fylum.Users.Api/Fylum.Users.Api.csproj
+++ b/Fylum.Users.Api/Fylum.Users.Api.csproj
@@ -1,5 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<ItemGroup>
+	  <None Include="LogoutClaimRequest.cs" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="FastEndpoints" />
 	</ItemGroup>
 	<ItemGroup>
