add migration client cli to aspire

--- a/Fylum.Migrations.Client.Cli/Fylum.Migrations.Client.Cli.csproj
+++ b/Fylum.Migrations.Client.Cli/Fylum.Migrations.Client.Cli.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Moq" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" />
+    <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" />
   </ItemGroup>
 
   <ItemGroup>
