--- a/Fylum.Client.Cli/Fylum.Client.Cli.csproj
+++ b/Fylum.Client.Cli/Fylum.Client.Cli.csproj
@@ -1,11 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Fylum.Client\Fylum.Client.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Hosting" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Fylum.Client\Fylum.Client.csproj" />
+	</ItemGroup>
 
 </Project>
