--- a/Fylum.Migrations.Winforms/appSettings.json
+++ b/Fylum.Migrations.Winforms/appSettings.json
@@ -1,7 +1,4 @@
 {
-  "DbConnection": {
-    "Host": "localhost",
-    "Port": 5433,
-    "Database": "fylum"
-  }
+  "MigrationsApiBaseUrl": "https://localhost:8109",
+  "ApiTimeoutSeconds":  30
 }
