add migrations-web to aspire orchestration add a first basic table, giving an overview of all the migrations

--- a/Fylum.AppHost/Fylum.AppHost.csproj
+++ b/Fylum.AppHost/Fylum.AppHost.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\Fylum.Api\Fylum.Api.csproj" />
     <ProjectReference Include="..\Fylum.Migrations.Api.Shared\Fylum.Migrations.Api.Shared.csproj" IsAspireProjectResource="false" />
     <ProjectReference Include="..\Fylum.Migrations.Api\Fylum.Migrations.Api.csproj" />
+    <ProjectReference Include="..\Fylum.Migrations.Web\Fylum.Migrations.Web.csproj" />
   </ItemGroup>
 
 </Project>
