--- a/Fylum.Migrations.Web/appsettings.Development.json
+++ b/Fylum.Migrations.Web/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MigrationsClientOptions": {
+    "BaseAddress": "https+http://migrations-api",
+    "TimeOutSeconds":  60
   }
 }
