--- a/Fylum.Migrations.Web/Fylum.Migrations.Web.csproj
+++ b/Fylum.Migrations.Web/Fylum.Migrations.Web.csproj
@@ -3,4 +3,8 @@
     <PackageReference Include="M2TWinForms.Themes" />
     <PackageReference Include="MudBlazor" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Fylum.Migrations.Client\Fylum.Migrations.Client.csproj" />
+    <ProjectReference Include="..\Fylum.ServiceDefaults\Fylum.ServiceDefaults.csproj" />
+  </ItemGroup>
 </Project>
