--- a/Fylum.Migrations.Web/Properties/launchSettings.json
+++ b/Fylum.Migrations.Web/Properties/launchSettings.json
@@ -1,23 +1,25 @@
 {
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+    "$schema": "https://json.schemastore.org/launchsettings.json",
     "profiles": {
-      "http": {
-        "commandName": "Project",
-        "dotnetRunMessages": true,
-        "launchBrowser": true,
-        "applicationUrl": "http://localhost:5185",
-        "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
+        "http": {
+            "commandName": "Project",
+            "dotnetRunMessages": true,
+            "launchBrowser": true,
+            "applicationUrl": "http://localhost:5185",
+            "launchUrl": "migrations",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        },
+        "https": {
+            "commandName": "Project",
+            "dotnetRunMessages": true,
+            "launchBrowser": true,
+            "applicationUrl": "https://localhost:7131;http://localhost:5185",
+            "launchUrl": "migrations",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
         }
-      },
-      "https": {
-        "commandName": "Project",
-        "dotnetRunMessages": true,
-        "launchBrowser": true,
-        "applicationUrl": "https://localhost:7131;http://localhost:5185",
-        "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
-        }
-      }
     }
-  }
+}
