--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -38,6 +38,7 @@
 		<!--Web UI-->
 		<PackageVersion Include="MudBlazor" Version="8.15.0" />
 		<PackageVersion Include="Scalar.AspNetCore" Version="2.11.6" />
+		<PackageVersion Include="M2TWinforms.Themes" Version="0.1.3" /> <!--to generate a web theme for now, will refactor later to not imply WinForms-->
 
 		<!--OpenTelemetry Service Defaults-->
 		<PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.14.0" />
