--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET Build and Test
 
 on:
@@ -31,15 +28,51 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore --property:EnableWindowsTargeting=true
     - name: Build
-      run: dotnet build --no-restore --property:EnableWindowsTargeting=true
+      run: dotnet build --no-restore -c Release --property:EnableWindowsTargeting=true
+    - name: Upload Build
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-output
+        path: . 
+
+  unit-tests:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        project: 
+        - Fylum.Postgres.Shared.Tests
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: build-output
+        path: .
+    - name: Run Unit Tests
+      run: |
+        dotnet test ${{ matrix.project }}/${{ matrix.project }}.csproj --no-build -c Release
+          --verbosity normal --property:EnableWindowsTargeting=true
+
+  e2e-tests:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        project: [Fylum.EndToEnd]
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: build-output
+        path: .
     - name: Install and Trust Dotnet Dev Certificate
       run: |
         mkdir -p ${HOME}/.aspnet/https
         dotnet dev-certs https -ep ${HOME}/.aspnet/https/aspnetapp.crt --format PEM
         sudo cp ${HOME}/.aspnet/https/aspnetapp.crt /usr/local/share/ca-certificates/aspnetapp.crt
         sudo update-ca-certificates
-    - name: Test
-      run: dotnet test --no-build --verbosity normal --property:EnableWindowsTargeting=true
+    - name: Run End To End Test
+      run: |
+        dotnet test ${{ matrix.project }}/${{ matrix.project }}.csproj --no-build -c Release
+          --verbosity normal --property:EnableWindowsTargeting=true
       env:
         Parameters__MigrationPerformingKey: "AnyRandomMigrationPerformingKey"
         JwtAuth__SigningKey: "Any sufficiently long enough key to sign the JWT Access Token with"
