--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -65,6 +65,8 @@ jobs:
       with:
         name: build-output
         path: .
+    - name: Restore Aspire Components
+      run: dotnet restore ${{ matrix.project }}/${{ matrix.project }}.csproj
     - name: Restore Permissions
       run: find . -type f -path "*/bin/*" -exec chmod +x {} +
     - name: Install and Trust Dotnet Dev Certificate
