added first end to end test for getting the root folder

--- a/Fylum.EndToEnd/Fylum.EndToEnd.csproj
+++ b/Fylum.EndToEnd/Fylum.EndToEnd.csproj
@@ -1,5 +1,7 @@
 ﻿<Project Sdk="MSTest.Sdk/4.0.2">
 
+  <PropertyGroup />
+
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.Testing" />
   </ItemGroup>
