refactored end to end tests to use a builder for the client application

--- a/Fylum.Postgres.Shared.Tests/Fylum.Postgres.Shared.Tests.csproj
+++ b/Fylum.Postgres.Shared.Tests/Fylum.Postgres.Shared.Tests.csproj
@@ -1,5 +1,7 @@
 ﻿<Project Sdk="MSTest.Sdk/4.0.2">
 
+  <PropertyGroup />
+
   <ItemGroup>
     <ProjectReference Include="..\Fylum.Postgres.Shared\Fylum.Postgres.Shared.csproj" />
   </ItemGroup>
