add the folders domain test project to the test pipeline

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -34,6 +34,7 @@ jobs:
       matrix:
         project: 
         - Fylum.Postgres.Shared.Tests
+        - Fylum.Folders.Domain.Tests
     steps:
     - uses: actions/download-artifact@v4
       with:
