use material theming in fylum.web

--- a/Fylum.Web/Fylum.Web.csproj
+++ b/Fylum.Web/Fylum.Web.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MaterialTheming" />
 		<PackageReference Include="MudBlazor" />
 	</ItemGroup>
 
