added proof of concept for registering css variables and classes for all material 3 color roles

--- a/Fylum.Migrations.Web/Fylum.Migrations.Web.csproj
+++ b/Fylum.Migrations.Web/Fylum.Migrations.Web.csproj
@@ -6,5 +6,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Fylum.Migrations.Client\Fylum.Migrations.Client.csproj" />
     <ProjectReference Include="..\Fylum.ServiceDefaults\Fylum.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Fylum.Web.MaterialTheming\Fylum.Web.MaterialTheming.csproj" />
   </ItemGroup>
 </Project>
