--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -30,6 +30,7 @@
 		<PackageVersion Include="Dapper" Version="2.1.66" />
 		<PackageVersion Include="Npgsql" Version="10.0.1" />
 		<!--Web UI-->
+		<PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="10.0.1" />
 		<PackageVersion Include="MudBlazor" Version="8.15.0" />
 		<PackageVersion Include="Scalar.AspNetCore" Version="2.11.10" />
 		<PackageVersion Include="MaterialTheming" Version="0.2.0" />
